[package]
name = "asmr"
version = "0.1.0"
authors = ["Luke Parker <lukeparker5132@gmail.com>", "Lee Bousfield <ljbousfield@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "*"
lazy_static = "*"
hex-literal = "*"
hex = "*"
enum-utils = "*"
enum_dispatch = "*"
anyhow = "*"
futures = "*"
tokio = { version = "*", features = ["full"] }
log = "*"
env_logger = "*"
structopt = "*"
rand = { version = "*", features = ["std"] }
bigint = "*"
digest = "*"
sha2 = "*"
blake2 = "*"
rust-argon2 = "*"
secp256kfun = { version = "*", features = ["serialization"] }
curve25519-dalek = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
derive_more = "*"
bincode = "*"
serde_json = "*"
reqwest = { version = "*", features = ["json"] }
bitcoin = "*"
nanocurrency-types = "*"
num_cpus = "*"
monero = "*"
digest_auth = "*"
ff = "*"
group = "*"
jubjub = "*"
zcash_primitives = "*"
zcash_proofs = "*"
zcash_client_backend = "*"

[features]
no_confs = []
test_bitcoin_node = []
test_meros_node = []
test_nano_node = []
test_monero_node = []
test_zcash_node = []

# Always optimize dependencies
[profile.dev.package."*"]
opt-level = 3
